--- a/kustomize-guestbook/guestbook-ui-ingress.yaml
+++ b/kustomize-guestbook/guestbook-ui-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: nginx 
 spec: 
   rules: 
-    - host: guestbook.gitops.local
+    - host: guestbook.gitops.20.62.244.72.nip.io
       http:
         paths: 
           - path: / 
